frostwire (6.12.0) stable; urgency=high
  * Telluride Video Search works in Spanish, German, Italian, French countries
  * Faster app startup
  * Java Runtime Environment 20.0.1

 -- FrostWire Team <contact@frostwire.com>  Sat, 06 Ma7 2023 11:08:00 -0600

frostwire (6.11.0) stable; urgency=high
  * Telluride Video Search
  * Java Runtime Environment 19.0.2 for Linux binaries

 -- FrostWire Team <contact@frostwire.com>  Mon, 27 Mar 2023 08:52:00 -0600

frostwire (6.10.0) stable; urgency=high
  * Faster search results
  * Telluride build 25 with Python 3.11, faster web video searches
  * New BTDigg search engine
  * Search results cache now works with sqlite database
  * MPlayer 1.5.0 with FFmpeg snapshot and OpenSSL 1.1.1s
  * SoundCloud search fixed
  * Torrentz2 search fixed
  * New button on status line right corner to open settings screen
  * Old buttons to access settings screen from search results and library gone
  * SearchManager now has 2 executors, one for crawlers another for one off requests
  * Default audio/video player setting for Linux is mplayer
  * Misc screen bugfix for Linux
  * Removed defunct Zooqle
  * Removed audio player playlists along with H2 database dependency
  * Less threads, less memory usage, more thread pool reusage for background UI related tasks
  * Express VPN detection fixed for Windows
  * DEV: New SearchPerformer.isDDOSProtectionActive() logic used in unit tests
  * CI: jdk19 tests
  * CI: telluride tests do not run in CI
  * CI: all search performers have tests

 -- FrostWire Team <contact@frostwire.com>  Fri, 3 Mar 2023 10:43:00 -0600

frostwire (6.9.10) stable; urgency=high
  * Java Runtime Environment 19.0.1
  * Telluride build 23
  * supports TikTok, IG Reels, YT Stories backups
  * com.google.re2j:re2j:1.7
  * com.google.code.gson:gson:2.9.0
  * com.squareup.okhttp:4.10.0
  * dev: org.junit.jupiter:junit-jupiter:5.9.0

 -- FrostWire Team <contact@frostwire.com>  Tue, 18 Oct 2022 21:38:00 -0600
