@@ -2,8 +2,9 @@ frostwire (6.12.0) stable; urgency=high
   * Telluride Video Search works in Spanish, German, Italian, French countries
   * Faster app startup
   * Java Runtime Environment 20.0.1
+  * Deprecation fix: URL(s) -> URI(s).toURL()
 
- -- FrostWire Team <contact@frostwire.com>  Sat, 06 Ma7 2023 11:08:00 -0600
+ -- FrostWire Team <contact@frostwire.com>  Wed, 17 May 2023 18:11:00 -0600
 
 frostwire (6.11.0) stable; urgency=high
   * Telluride Video Search
